--- a/config.yml
+++ b/config.yml
@@ -54,5 +54,10 @@ params:
 
 disqusShortname: "chickenlegs-cc"
 
-
-favicon: "/assets/favicon.ico"
+params:
+  assets:
+    favicon: "/favicon.ico"
+    favicon16x16:  "/favicon-16x16.png"
+    favicon32x32:  "/favicon-32x32.png"
+    apple_touch_icon:  "/apple-touch-icon.png"
+    safari_pinned_tab:  "/safari-pinned-tab.svg"
