--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,30 @@ languageCode: en-us
 title: CHICKENLEGS
 theme: PaperMod
 
+googleAnalytics: UA-123-45
+
+minify:
+  disableXML: true
+  minifyOutput: true
+
+params:  
+ assets:
+   favicon: "/favicon/favicon.ico"
+   favicon16x16:  "/favicon/favicon-16x16.png"
+   favicon32x32:  "/favicon/favicon-32x32.png"
+   apple_touch_icon:  "/favicon/apple-touch-icon.png"
+   safari_pinned_tab:  "/favicon/safari-pinned-tab.svg" 
+ 
+ ShowCodeCopyButtons: true
+ ShowToc: true
+ TocOpen: false
+ ShowBreadCrumbs: true
+ ShowPostNavLinks: true
+ defaultTheme: auto
+ #comments: true
+ disableThemeToggle: true
+ env: production # to enable google analytics, opengraph, twitter-cards and schema.
+
 menu:
   main:
     - identifier: categories
@@ -30,18 +54,3 @@ outputs:
 
 disqusShortname: "chickenlegs-cc"
 
-params:  
- assets:
-   favicon: "/favicon/favicon.ico"
-   favicon16x16:  "/favicon/favicon-16x16.png"
-   favicon32x32:  "/favicon/favicon-32x32.png"
-   apple_touch_icon:  "/favicon/apple-touch-icon.png"
-   safari_pinned_tab:  "/favicon/safari-pinned-tab.svg" 
- 
- ShowCodeCopyButtons: true
- ShowToc: true
- TocOpen: false
- ShowBreadCrumbs: true
- ShowPostNavLinks: true
- defaultTheme: auto
- #comments: true
