last tune of the day

--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,10 @@ theme: PaperMod
 
 googleAnalytics: UA-123-45
 
+params:
+  assets:
+    disableHLJS: true
+
 minify:
   disableXML: true
   minifyOutput: true
@@ -26,6 +30,7 @@ params:
  #comments: true
  disableThemeToggle: true
  env: production # to enable google analytics, opengraph, twitter-cards and schema.
+
 
 menu:
   main:
