--- a/config.yml
+++ b/config.yml
@@ -51,6 +51,9 @@ menu:
       name: Search
       url: /search/
       weight: 40
+      - name: Tags
+                  url: tags/
+                  weight: 10
 
 outputs:
     home:
