--- a/config.yml
+++ b/config.yml
@@ -51,8 +51,8 @@ menu:
       name: Search
       url: /search/
       weight: 40
-      - identifier: tags
-      - name: Tags
+    - identifier: tags
+      name: Tags
       url: /tags/
       weight: 5
 
