--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 baseURL: "https://chickenlegs.cc"
 languageCode: en-us
-title: CHICKENLEGS
+title: CHICKENLEGS☄️ Fast | ☁️ Fluent | 🌙 Smooth | 📱 Responsive
 theme: PaperMod
 
 googleAnalytics: UA-123-45
