--- a/config.yml
+++ b/config.yml
@@ -27,16 +27,18 @@ params:
    favicon32x32:  "/favicon/favicon-32x32.png"
    apple_touch_icon:  "/favicon/apple-touch-icon.png"
    safari_pinned_tab:  "/favicon/safari-pinned-tab.svg" 
- ShowCodeCopyButtons: true
- ShowToc: true
- TocOpen: false
- ShowBreadCrumbs: false
- ShowPostNavLinks: true
- defaultTheme: auto
- #comments: true
- disableThemeToggle: true
- env: production # to enable google analytics, opengraph, twitter-cards and schema.
- #hideSummary: true
+    defaultTheme: auto
+    # disableThemeToggle: true
+    ShowShareButtons: true
+    ShowReadingTime: true
+    # disableSpecial1stPost: true
+    displayFullLangName: true
+    ShowPostNavLinks: true
+    ShowBreadCrumbs: true
+    ShowCodeCopyButtons: true
+    ShowRssButtonInSectionTermList: true
+    ShowToc: true
+    # comments: false 
 
 
 menu:
