--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ params:
    apple_touch_icon:  "/favicon/apple-touch-icon.png"
    safari_pinned_tab:  "/favicon/safari-pinned-tab.svg" 
     defaultTheme: auto
-    # disableThemeToggle: true
+    disableThemeToggle: false
     ShowShareButtons: true
     ShowReadingTime: true
     # disableSpecial1stPost: true
