--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ baseURL: "https://chickenlegs.cc"
 languageCode: en-us
 title: CHICKENLEGS
 theme: PaperMod
-
+description: sdgjklhgadfbjhbadfhk
 enableInlineShortcodes: true
 enableRobotsTXT: true
 buildDrafts: false
