--- a/config.yml
+++ b/config.yml
@@ -32,6 +32,7 @@ params:
     # comments: false 
      
 assets:
+  disableHLJS: true
     favicon: "/favicon/favicon.ico"
     favicon16x16:  "/favicon/favicon-16x16.png"
     favicon32x32:  "/favicon/favicon-32x32.png"
