--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ params:
     ShowCodeCopyButtons: true
     ShowRssButtonInSectionTermList: true
     ShowToc: true
-    hideSummary: false
+    hideSummary: true
     # comments: false 
      
 assets:
